Bug 354849 - Link to "Open LastFM webpage for this artist" dead
Summary: Link to "Open LastFM webpage for this artist" dead
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View/Similar Artists (other bugs)
Version First Reported In: 2.8.90 (2.9 beta)
Platform: Other Linux
: NOR normal
Target Milestone: 2.9
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-04 19:13 UTC by Olivier Churlaud
Modified: 2018-02-24 22:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Churlaud 2015-11-04 19:13:50 UTC
The link is dead and should be changed.

It points to http://www.http.com//www.last.fm/music/>Artist_Name>

Reproducible: Always
Comment 1 Stefano Pettini 2018-02-24 22:37:46 UTC
Git commit ee13a2d2fbfe0720491c95be9be865b2e36bdd81 by Stefano Pettini.
Committed on 24/02/2018 at 22:34.
Pushed by spettini into branch 'master'.

Fixed "Open Last-fm webpage" of similar artist

It looks like the assumption that last.fm returns incomplete
urls is not valid. This at least since 2015.
FIXED-IN: 2.9

M  +2    -4    src/context/applets/similarartists/ArtistWidget.cpp

https://commits.kde.org/amarok/ee13a2d2fbfe0720491c95be9be865b2e36bdd81