Fixed "Open Last-fm webpage" of similar artist

It looks like the assumption that last.fm returns incomplete
urls is not valid. This at least since 2015.

BUG: 354849
FIXED-IN: 2.9